objects/Speaker__c.object
<CustomObject>
    <fields>
        <fullName>CXC_Visit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CXC Visit Number</label>
        <referenceTo>CEC__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@genesys</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Speaker</label>
    <nameField>
        <displayFormat>SL{0000}</displayFormat>
        <label>Speaker List</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>